:STYLE: => correction input dark mode

--- a/src/styles/sass/themes/_darkThemes.scss
+++ b/src/styles/sass/themes/_darkThemes.scss
@@ -99,6 +99,7 @@ body.darkTheme {
         textarea {
           background: transparent;
           box-shadow: 0px 15px 10px -15px white;
+          color: white;
         }
         & input::placeholder,
         textarea::placeholder {
